fixed overflow

--- a/css/my.css
+++ b/css/my.css
@@ -120,5 +120,5 @@
       max-width: 50%;
   }
   body {
-      overflow: hidden;
+      /* overflow: hidden; */
   }
